# fuse-med-ml

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  add_preamble.py  data_path.sh  dev_requirements.txt  jenkins_env.sh  paper.bib  paper.md  pyproject.toml  pyutils_submit_job.py  requirements.txt  run_all_unit_tests.py  run_all_unit_tests.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  ---question.md
.github/workflows/: Test.yaml  black.yaml  lint.yaml  test.yaml
Fuse/analyzer/: analyzer_default.py
Fuse/data/augmentor/: augmentor_base.py  augmentor_batch_level_callback.py  augmentor_default.py  augmentor_toolbox.py
Fuse/data/cache/: cache_files.py  cache_memory.py  cache_null.py
Fuse/data/data_source/: data_source_base.py  data_source_default.py  data_source_from_list.py
Fuse/data/dataset/: dataset_dataframe.py  dataset_default.py  dataset_generator.py  dataset_wrapper.py
Fuse/data/processor/: processor_base.py  processor_csv.py  processor_dataframe.py  processor_rand.py
Fuse/data/sampler/: sampler_balanced_batch.py
Fuse/data/visualizer/: visualizer_default.py  visualizer_default_3d.py  visualizer_image_analysis.py
Fuse/evaluation/: fuse_evaluation_task.py  fuse_generic_ground_truth_label.py  fuse_prediction_results.py
Fuse/losses/: loss_base.py  loss_default.py
Fuse/losses/classification/: loss_segmentation_cross_entropy.py
Fuse/managers/: manager_default.py  manager_state.py
Fuse/metrics/: metric_auc_per_pixel.py  metric_base.py  metric_confidence_interval.py  metrics_toolbox.py
Fuse/models/: model_default.py  model_ensemble.py  model_multistream.py  model_siamese.py  model_wrapper.py
Fuse/optimizers/: opt_closure_cb.py  opt_sam.py
Fuse/templates/: walkthrough_template.py
Fuse/utils/: utils_debug.py  utils_file.py  utils_gpu.py  utils_hierarchical_dict.py  utils_image_processing.py  utils_logger.py  utils_misc.py  utils_param_sampler.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  fuse.data.datasets.caching.rst  fuse.data.datasets.caching.tests.rst  fuse.data.datasets.rst  fuse.data.datasets.tests.rst  fuse.data.ops.rst  fuse.data.ops.tests.rst  fuse.data.pipelines.rst  fuse.data.pipelines.tests.rst  fuse.data.rst  fuse.data.tests.rst  fuse.data.utils.rst  fuse.data.utils.tests.rst  fuse.dl.lightning.rst  fuse.dl.losses.rst  fuse.dl.losses.segmentation.rst  fuse.dl.models.backbones.rst  fuse.dl.models.heads.rst  fuse.dl.models.rst  fuse.dl.rst  fuse.dl.templates.rst  fuse.dl.tests.rst  fuse.eval.examples.rst  fuse.eval.metrics.libs.rst  fuse.eval.metrics.rst  fuse.eval.metrics.segmentation.rst  fuse.eval.metrics.survival.rst  fuse.eval.rst  fuse.eval.tests.rst  fuse.rst  fuse.utils.config_tools.rst  fuse.utils.config_tools.tests.rst  fuse.utils.cpu_profiling.rst  fuse.utils.cpu_profiling.tests.rst  fuse.utils.data.rst  fuse.utils.data.tests.rst  fuse.utils.file_io.rst  fuse.utils.file_io.tests.rst  fuse.utils.multiprocessing.rst  fuse.utils.rand.rst  (+32 more)
examples/: cache_test.ipynb  requirements.txt  setup.py
examples/fuse_examples/: fuse_examples_utils.py
fuse/: requirements.txt  requirements_all.txt  requirements_dev.txt
fuse/analyzer/: analyzer_default.py
fuse/data/: README.md  __init__.py  key_types.py  key_types_for_testing.py  patterns.py
fuse/dl/: README.md  __init__.py
fuse/doc/: coding_style.md  high_level_example.md  user_guide.md
fuse/eval/: README.md  __init__.py  evaluator.py
fuse/losses/: loss_base.py  loss_default.py  loss_warm_up.py
fuse/managers/: manager_default.py  manager_state.py  pipeline.py
fuse/metrics/: metric_auc_per_pixel.py  metric_base.py  metric_confidence_interval.py  metric_from_loss.py  metrics_toolbox.py
fuse/models/: model_default.py  model_multistream.py  model_siamese.py  model_wrapper.py
fuse/optimizers/: opt_closure_cb.py  opt_sam.py
fuse/templates/: walkthrough_template.py
fuse/utils/: README.md  __init__.py  add_preamble.py  collate.py  gpu.py  interface_validator.py  ndict.py  utils_atomic_file.py  utils_debug.py  utils_file.py  utils_gpu.py  utils_hierarchical_dict.py  utils_image_processing.py  utils_logger.py  utils_misc.py  utils_param_sampler.py
fuse_examples/: requirements.txt
fuse_examples/ml_pipelines/: README.md  mnist.py
fuse_examples/segmentation/: Fuse_segmentation.py  runner_seg.py  unet.py
fuse_examples/test/: colab_tests.ipynb  test_classification_mg_cmmd.py  test_classification_mnist.py  test_classification_skin_lesion.py
fuse_examples/tests/: colab_tests.ipynb  test_classification_bright,py  test_classification_cmmd.py  test_classification_isic.py  test_classification_knight.py  test_classification_mnist.py  test_classification_prostatex.py  test_classification_skin_lesion.py  test_classification_stoic21.py  test_ehr_transformer.py  test_notebook_hello_world.py  test_segmentation_picai.py
fuseimg/: README.md  __init__.py  requirements.txt
fuseimg/data/: README.md
fuseimg/datasets/: cmmd.py  duke.py  duke_label_type.py  duke_main.py  isic.py  kits21.py  kits21_example.ipynb  knight.py  mnist.py  picai.py  picai_test.py  prostate_x.py  skin_lesion.py  stoic21.py  ukbb_neck_to_knee.py  visualize.ipynb
fuseimg/eval/: metrics_vis_2d.py
fuseimg/utils/: image_processing.py
paper/: paper.bib  paper.md
(+1160 files in other folders)
